--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -37,3 +37,36 @@
   border: none;
   margin: 0.6rem;
 }
+
+.header-notification {
+  position: absolute;
+  left: 0;
+  margin-top: 0.2rem;
+  width: 16rem;
+  background-color: white;
+  color: #000000;
+  box-shadow: 0 1px 20px 0 rgba(70, 90, 100, 0.08);
+  display: none;
+}
+
+.notification-img {
+  width: 3rem;
+  border-radius: 0.1rem;
+}
+
+.notification-user {
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-top: 0.3rem;
+}
+
+.notification-text {
+  font-size: 0.7rem;
+  line-height: 0.7rem;
+}
+
+.notification-time {
+  font-size: 0.6rem;
+  line-height: 0.6rem;
+  color: #919aa3;
+}
