--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -203,3 +203,72 @@
   text-decoration: none;
   color: #fe8a7d;
 }
+
+.sidebar-link > i {
+  width: 2rem;
+  text-align: center;
+}
+
+.sidebar-group-link {
+  font-size: 0.8rem;
+  margin-top: 1rem;
+  padding: 0.4rem 0;
+  color: #dcdcdc;
+}
+
+.sidebar-group-link-active {
+  border-right: 3px solid #fe8a7d;
+}
+
+.sidebar-group-link > .sidebar-dropdown {
+  /* display: none; */
+  height: 0;
+}
+
+.sidebar-group-link-active > .sidebar-dropdown {
+  height: auto !important;
+  display: block !important;
+}
+
+.sidebar-dropdown-toggle {
+  cursor: pointer;
+  padding: 0.2rem 1rem;
+  transition: all 0.3s;
+}
+
+.sidebar-dropdown-toggle:hover span {
+  color: #f7f7f7;
+}
+
+.sidebar-dropdown-toggle .icon {
+  width: 2rem;
+  text-align: center;
+}
+
+.sidebar-dropdown-toggle .angle {
+  float: left;
+  padding: 0.4rem 0;
+}
+
+.sidebar-dropdown a,
+button {
+  padding: 0.2rem 1rem;
+  display: block;
+  text-decoration: none;
+  background-color: inherit;
+  outline: none;
+  border: none;
+  color: #dcdcdc;
+  transition: all 0.3s;
+}
+
+.sidebar-dropdown a::before,
+button::before {
+  content: "»";
+  margin: 0.8rem;
+}
+
+.sidebar-dropdown a:hover,
+button:hover {
+  color: #fe8a7d;
+}
