--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,86 @@
 .pointer {
   cursor: pointer;
 }
+
+.bg-custom-yellow {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#feb798),
+    to(#fe9365)
+  );
+  background: linear-gradient(to right, #feb798, #fe9365);
+}
+
+.bg-custom-green {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#0df3a3),
+    to(#0ac282)
+  );
+  background: linear-gradient(to right, #0df3a3, #0ac282);
+}
+
+.bg-custom-pink {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#fe909d),
+    to(#fe5d78)
+  );
+  background: linear-gradient(to right, #fe909d, #fe5d78);
+}
+
+.bg-custom-blue {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#01dbdf),
+    to(#01a9ac)
+  );
+  background: linear-gradient(to right, #01dbdf, #01a9ac);
+}
+
+.info-box-body h5 {
+  font-size: 0.9rem;
+  line-height: 1rem;
+}
+
+.info-box-body p {
+  font-size: 0.7rem;
+  line-height: 1rem;
+}
+
+.info-box-body i {
+  font-size: 2rem;
+}
+
+.info-box-footer {
+  font-size: 0.6rem;
+}
+
+.main-body-container {
+  background-color: #ffffff;
+  margin: 1rem 0;
+  border-radius: 0.25rem;
+  padding: 1rem;
+}
+
+.main-body-container-header h5 {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.main-body-container-header p {
+  font-size: 0.8rem;
+  font-weight: #777;
+}
+
+.body-content p {
+  font-size: 0.8rem;
+}
